[gd_scene load_steps=10 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://Scenes/Games/Platformer/scripts/player.gd" id="1_ffboj"]
[ext_resource type="PackedScene" uid="uid://c0e27836xgmhi" path="res://Scenes/Games/Platformer/objects/character.tscn" id="2_nero3"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://Scenes/Games/Platformer/meshes/dust.res" id="4_mvhqy"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://Scenes/Games/Platformer/sounds/walking.ogg" id="5_ics1s"]
[ext_resource type="AudioStream" uid="uid://dw2m5fxhfjykq" path="res://Scenes/Games/Platformer/sounds/jump.ogg" id="6_yto24"]
[ext_resource type="AudioStream" uid="uid://xnxidwkp46un" path="res://Scenes/Games/Platformer/sounds/land.ogg" id="7_p57dn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7stj"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_xh1e2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_ffboj")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Character" parent="." instance=ExtResource("2_nero3")]

[node name="leg-left" parent="Character/character2/root" index="0"]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0.125, 0.17625, -0.02375)

[node name="leg-right" parent="Character/character2/root" index="1"]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -0.125, 0.17625, -0.02375)

[node name="torso" parent="Character/character2/root" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, -1.80478e-15, 0.17625, -0.02375)

[node name="arm-left" parent="Character/character2/root/torso" index="0"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0.3, 0.2, 0)

[node name="arm-right" parent="Character/character2/root/torso" index="1"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.3, 0.1445, 0)

[node name="ParticlesTrail" type="CPUParticles3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_q7stj")
cast_shadow = 0
amount = 60
mesh = ExtResource("4_mvhqy")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = SubResource("Curve_xh1e2")

[node name="SoundFootsteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_ics1s")
attenuation_model = 3
pitch_scale = 1.25
autoplay = true

[node name="SoundJump" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_yto24")
attenuation_model = 3

[node name="SoundLand" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_p57dn")
attenuation_model = 3

[editable path="Character"]
